<resources>
    <string name="app_name">Convenie</string>
    <string name="mainpage_text">Convenie Database System</string>
    <string name="mainpage_button">Enter</string>
    <string name="items_text">Items on hand</string>
    <string name="employee_text">Employee Information</string>
    <string name="transaction_text">Transaction Information</string>
    <string name="vendor_text">Vendor Information</string>
    <string name="expire_text" translatable="false">Expire Date Information</string>
    <string name="sale_text">Sale Information</string>
    <string name="employee_btn">Employee Information</string>
    <string name="sale_btn">Sale Information By Date</string>
    <string name="expire_btn" translatable="false">Expire Date Information</string>
    <string name="items_btn">Items On Hand Information</string>
    <string name="vendor_btn">Vendor Information</string>
    <string name="transaction_btn">Transaction Information</string>
    <string name="editText2">inputType</string>
    <string name="editText1">inputType</string>
    <string name="button1">onClick</string>
    <string name="gobackbtn">back</string>
    <string name="input_textview">Input Data</string>
    <string name="Input_Employee">Employee Information</string>
    <string name="input_vendor">Vendor Information</string>
    <string name="input_items">Items Information</string>
</resources>
